--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,30 +1,18 @@
-name: Pipeline
-on: [push, pull_request]
+# See https://fly.io/docs/app-guides/continuous-deployment-with-github-actions/
 
+name: Fly Deploy
+on:
+  push:
+    branches:
+      - main
 jobs:
-  test:
+  deploy:
+    name: Deploy app
     runs-on: ubuntu-latest
-
-    env:
-      DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      SECRET_KEY: ${{ secrets.SECRET_KEY }}
-      ALGORITHM: ${{ secrets.ALGORITHM }}
-      ACCESS_TOKEN_EXPIRE_MINUTES: ${{ secrets.ACCESS_TOKEN_EXPIRE_MINUTES }}
-
+    concurrency: deploy-group # optional: ensure only one action runs at a time
     steps:
-      - name: Copia os arquivos do repositório
-        uses: actions/checkout@v3
-
-      - name: Instalar o python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11.1'
-
-      - name: Instalar o poetry
-        run: pipx install poetry
-
-      - name: Instalar dependências
-        run: poetry install
-
-      - name: Executar testes
-        run: poetry run task test
+      - uses: actions/checkout@v4
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: flyctl deploy --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
