--- a/fly.toml
+++ b/fly.toml
@@ -3,20 +3,24 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "fastzeroapp"
-primary_region = "gru"
+app = "visulinx-api"
+primary_region = "sjc"
 
 [build]
 
+[deploy]
+  release_command = 'poetry run task migrate'
+
 [http_service]
-  internal_port = 8000
+  internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
 
 [[vm]]
-  cpu_kind = "shared"
+  memory = '512mb'
+  cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 256
+
