--- a/compose.yaml
+++ b/compose.yaml
@@ -19,7 +19,7 @@ services:
     depends_on:
       - fastzero_database
     environment:
-      DATABASE_URL: postgresql+psycopg://app_user:app_password@fastzero_database:5432/app_db
+      DATABASE_URL: postgresql+psycopg2://app_user:app_password@fastzero_database:5432/app_db
 
 volumes:
   pgdata:
