--- a/fly.toml
+++ b/fly.toml
@@ -1,18 +1,18 @@
-# fly.toml app configuration file generated for fastzeroapp on 2023-12-14T03:31:43-03:00
+# fly.toml app configuration file generated for visulinx-api on 2024-11-22T08:30:50-04:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "visulinx-api"
-primary_region = "sjc"
+app = 'visulinx-api'
+primary_region = 'sjc'
 
 [build]
 
 [deploy]
-  release_command = 'poetry run task migrate'
+  release_command = 'uv run alembic upgrade head'
 
 [http_service]
-  internal_port = 8080
+  internal_port = 8000
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
@@ -23,4 +23,3 @@ primary_region = "sjc"
   memory = '512mb'
   cpu_kind = 'shared'
   cpus = 1
-
