--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,33 +1,32 @@
-[tool.poetry]
-name = "fast-zero"
+[project]
+name = "visulinx-api"
 version = "0.1.0"
-description = ""
-authors = ["dunossauro <mendesxeduardo@gmail.com>"]
+description = "Add your description here"
 readme = "README.md"
-packages = [{include = "fast_zero"}]
+requires-python = ">=3.11"
+dependencies = [
+    "alembic>=1.14.0",
+    "fastapi[standard]>=0.115.5",
+    "psycopg2-binary>=2.9.10",
+    "pwdlib[argon2]>=0.2.1",
+    "pydantic-settings>=2.6.1",
+    "pydantic[email]>=2.10.0",
+    "pyjwt>=2.10.0",
+    "python-multipart>=0.0.17",
+    "sqlalchemy>=2.0.36",
+    "testcontainers>=4.8.2",
+]
 
-[tool.poetry.dependencies]
-python = "^3.11"
-fastapi = "^0.111.0"
-pydantic = {extras = ["email"], version = "^2.7.2"}
-sqlalchemy = "^2.0.30"
-pydantic-settings = "^2.2.1"
-alembic = "^1.13.1"
-python-multipart = "^0.0.9"
-pyjwt = "^2.8.0"
-psycopg = {extras = ["binary"], version = "^3.1.19"}
-pwdlib = {extras = ["argon2"], version = "^0.2.0"}
-testcontainers = "^4.5.1"
-psycopg2-binary = "^2.9.10"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.2.1"
-pytest-cov = "^5.0.0"
-taskipy = "^1.12.2"
-ruff = "^0.4.7"
-httpx = "^0.27.0"
-factory-boy = "^3.3.0"
-freezegun = "^1.5.1"
+[dependency-groups]
+dev = [
+    "factory-boy>=3.3.1",
+    "freezegun>=1.5.1",
+    "httpx>=0.27.2",
+    "pytest>=8.3.3",
+    "pytest-cov>=6.0.0",
+    "ruff>=0.7.4",
+    "taskipy>=1.14.0",
+]
 
 [tool.ruff]
 line-length = 79
@@ -48,7 +47,7 @@ addopts = '-p no:warnings'
 [tool.taskipy.tasks]
 lint = 'ruff check .; ruff check . --diff'
 format = 'ruff check . --fix; ruff format .'
-dev = 'fastapi dev fast_zero/app.py'
+dev = 'fastapi dev app/api.py'
 migrate = 'alembic upgrade head'
 pre_test = 'task lint'
 test = 'pytest -s -x --cov=fast_zero -vv'
@@ -56,7 +55,4 @@ post_test = 'coverage html'
 
 [tool.mypy]
 plugins = ["pydantic.mypy"]
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+ignore_missing_imports = true
