--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "alembic>=1.14.0",
     "fastapi[standard]>=0.115.5",
+    "mypy>=1.13.0",
     "psycopg2-binary>=2.9.10",
     "pwdlib[argon2]>=0.2.1",
     "pydantic-settings>=2.6.1",
@@ -56,3 +57,4 @@ post_test = 'coverage html'
 [tool.mypy]
 plugins = ["pydantic.mypy"]
 ignore_missing_imports = true
+
