--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,11 @@ name = "visulinx-api"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.14.0",
+    "boto3-stubs[s3]>=1.35.68",
+    "boto3>=1.35.68",
     "fastapi[standard]>=0.115.5",
     "mypy>=1.13.0",
     "psycopg2-binary>=2.9.10",
@@ -16,6 +18,7 @@ dependencies = [
     "python-multipart>=0.0.17",
     "sqlalchemy>=2.0.36",
     "testcontainers>=4.8.2",
+    "python-magic>=0.4.27",
 ]
 
 [dependency-groups]
