--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "sqlalchemy>=2.0.36",
     "testcontainers>=4.8.2",
     "python-magic>=0.4.27",
+    "pytest-asyncio>=0.24.0",
 ]
 
 [dependency-groups]
@@ -47,6 +48,7 @@ quote-style = 'single'
 [tool.pytest.ini_options]
 pythonpath = "."
 addopts = '-p no:warnings'
+asyncio_default_fixture_loop_scope = "function"
 
 [tool.taskipy.tasks]
 lint = 'ruff check .; ruff check . --diff'
