--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "testcontainers>=4.8.2",
     "python-magic>=0.4.27",
     "pytest-asyncio>=0.24.0",
+    "modal>=0.67.9",
 ]
 
 [dependency-groups]
