--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ dependencies = [
     "python-magic>=0.4.27",
     "pytest-asyncio>=0.24.0",
     "modal>=0.67.9",
+    "google-generativeai>=0.8.3",
+    "pillow>=11.0.0",
+    "types-requests>=2.32.0.20241016",
 ]
 
 [dependency-groups]
